# osgEngine

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
Asset/: Entity.xast  Material.xast  Mesh.xast  Shader.xast  TestEntity.xast
Asset/Entity/: TestEntity.xast
Asset/Material/: DefaultMaterial.xast  MI_TilesMosaic01.xast  MI_West_Heli_UH60A_Body.xast  MI_West_Heli_UH60A_Glass.xast  Material.002.xast  TestMaterial.xast  TestMaterial2.xast  TestMaterialInstance.xast  TestMaterialTemplate.xast  WorldGridMaterial.xast
Asset/Mesh/: AATest.xast  Cube.xast  LodTest.xast  SM_Chair.xast  SM_PreviewMesh_04.xast  Sphere.xast  Suzanne.xast  Test.xast  TestMesh.xast  Tree.xast  UH60A.xast
Asset/Scene/: TestScene.xast
Asset/Shader/: DefaultShader.xast  GLTF.xast  TestShader.xast  TestShader2.xast  TestShader3.xast
Asset/Texture/: 66.xast  AwesomeFace.xast  BRDFLut.xast  Black.xast  Container.xast  DefaultTexture.xast  MI_TilesMosaic01_BaseColor.xast  MI_TilesMosaic01_MetallicRoughness.xast  MI_West_Heli_UH60A_Body_BaseColor.xast  MI_West_Heli_UH60A_Body_Emissive.xast  MI_West_Heli_UH60A_Body_MetallicRoughness.xast  MI_West_Heli_UH60A_Glass_BaseColor.xast  MI_West_Heli_UH60A_Glass_MetallicRoughness.xast  MRR.xast  Normal.xast  T_Ceramic_Tile_M.xast  T_Ceramic_Tile_N.xast  T_Chair_M.xast  T_Chair_N.xast  T_Perlin_Noise_M.xast  T_Rock_Marble_Polished_D.xast  T_West_Heli_UH60A_Glass_ARM.xast  T_West_Heli_UH60A_Glass_N.xast  White.xast  WhiteCubemap.xast  WorldGridMaterial_BaseColor.xast  WorldGridMaterial_MetallicRoughness.xast  WorldGridMaterial_Normal.xast
Binary/: imgui.ini
CMakeModules/: FindOSG.cmake
Document/: 反射系统.md
Shader/AntiAliasing/: FilamentTAA.glsl  TAA.frag.glsl
Shader/Atmosphere/: AerialPerspectiveLut.comp.glsl  Atmosphere.glsl  AtmosphereCommon.glsl  AtmosphereCommon.h.glsl  DistantSkyLightLut.comp.glsl  Generate.bat  MultiScatteringLut.comp.glsl  RayMarching.frag.glsl  SkyLightCubemap.comp.glsl  SkyViewLut.comp.glsl  TransmittanceLut.comp.glsl  TransmittanceLut.frag.glsl  _MultiScatteringLut.comp.glsl
Shader/Common/: ColorGrading.frag.glsl  ColorGradingLut.frag.glsl  CombineAtmosphereAndCloud.frag.glsl  CombineColorAndDepthMs.frag.glsl  CombineColorAndDepthMs2.frag.glsl  CombineEarthAndGBuffer.frag.glsl  CombineEarthAndGBuffer2.frag.glsl  CombineOpaqueAndTransparent.frag.glsl  CopyColor.frag.glsl  CopyColor2.frag.glsl  CopyColorAndDepth.frag.glsl  CopyColorAndDepthMs.frag.glsl  CopyColorMs.frag.glsl  Final.frag.glsl  Input.frag.glsl  Input.vert.glsl  Input2.frag.glsl  Input2.vert.glsl  Layered.geom.glsl  Lighting.frag.glsl  ScreenQuad.vert.glsl  TAA.frag.glsl  Test.frag.glsl  TestInput.frag.glsl  TestInput.vert.glsl  Transparent.frag.glsl  Transparent.vert.glsl
Shader/IBL/: BRDFLut.comp.glsl  EnvCubemap.comp.glsl  Prefilter.comp.glsl  Prefilter0.comp.glsl  Prefilter1.comp.glsl  Prefilter2.comp.glsl  Prefilter3.comp.glsl  Prefilter4.comp.glsl
Shader/Lighting/: Common.glsl  Opaque.frag.glsl
Shader/Mesh/: Mesh.frag.glsl  Mesh.vert.glsl  StaticMesh.frag.glsl  StaticMesh.vert.glsl
Shader/Shadow/: ShadowCast.vert.glsl  ShadowMask.frag.glsl
Shader/SphericalHarmonics/: CombineSH.comp.glsl  DiffuseSH.comp.glsl  DiffuseSHCoeff.comp.glsl
Shader/Test/: ComputeImage.comp.glsl  Filter.frag.glsl  Framework.frag.glsl  Framework.vert.glsl  T.frag.glsl  (+13 more)
Source/Core/: CMakeLists.txt  Component.h  Context.h  Core.cpp  Core.h  Engine.h  Entity.cpp  Entity.h  ImGuiHandler.h  Pipeline.h
Source/Core/Asset/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  Material.cpp  Material.h  MaterialAsset.cpp  MaterialAsset.h  MeshAsset.cpp  MeshAsset.h  StaticMesh.h  StaticMeshAsset.cpp  StaticMeshAsset.h  Texture.h  TextureAsset.cpp  TextureAsset.h
Source/Core/Base/: Component.h  Context.h  Entity.cpp  Entity.h  Reflection.h
Source/Core/Component/: MeshRenderer.h
Source/Core/Component/Render/: MeshRenderer.h
Source/Core/Render/: Material.h  Pipeline.h
Source/Core/Runtime/: Component.h  Entity.cpp
Source/Core/Utility/: GLTFLoader.h  Log.h
Source/Editor/: AssetBrowser.h  CMakeLists.txt  ControllerManipulator.h  DockSpace.h  Editor.cpp  Editor.h  GLDebugCallback.h  Gizmo.h  ImGuiHandler.h  Inspector.h  Main.cpp  PickEventHandler.h  Pipeline.h  SceneView.h  Widget.h  Window.h  WindowManager.h
Source/Editor/Window/: AssetBrowser.h  DockSpace.h  Hierarchy.h  Inspector.h  MaterialEditor.h  SceneView.h  ShaderEditor.h  Widget.h  Window.h  WindowManager.h
Source/Engine/Core/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Component.cpp  Component.h  Context.cpp  Context.h  Engine.h  Entity.cpp  Entity.h  Guid.cpp  Guid.h  MeshRenderer.h  Object.cpp  Object.h  OsgReflection.cpp  OsgReflection.h  Prefab.cpp  Prefab.h  Scene.cpp  Scene.h
Source/Engine/Core/Reflection/: Any.h  Argument.h  Class.h  Enum.h  Enumeration.h  Fundamental.h  Metadata.h  Method.h  Property.h  Reflection.cpp  Reflection.h  Reflection.inl  Special.h  Struct.h  Structure.h  Type.h
Source/Engine/Core/Reflection/Special/: StdArray.h  StdList.h  StdMap.h  StdPair.h  StdSet.h  StdString.h  StdTuple.h  StdUnorderedMap.h  StdUnorderedSet.h  StdVariant.h  StdVector.h
Source/Engine/Core/Serialization/: AssetLoader.cpp  AssetLoader.h  AssetSaver.cpp  AssetSaver.h  AssetSerializer.cpp  AssetSerializer.h  JsonSerializer.h  Serializer.cpp  Serializer.h
Source/Engine/Render/: CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshLOD.cpp  MeshLOD.h  Mesh_.cpp  Mesh_.h  Pipeline.cpp  Pipeline.h  SceneRendering.h  Shader.cpp  Shader.h  StaticMesh.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  Texture2DArray.cpp  Texture2DArray.h  Texture3D.cpp  Texture3D.h  TextureCubemap.cpp  TextureCubemap.h
Source/Test/Core/: CMakeLists.txt  GLTFLoader.h  Main.cpp  Template.cpp  TestEventHandler.h
Source/Tests/Cloud/: CMakeLists.txt  ControllerManipulator.h  ImGuiHandler.h  Main.cpp
Source/Tests/QuickTest/: CMakeLists.txt  Main.cpp  NewPipeline.cpp
Temp/: Material.xast  Test.glb  entity.xast  lod.fbx  lod2.fbx  lod2.mtl  shader.xast  sphere.fbx  test.dae  test.fbx
(+62 files in other folders)
