add_library (
    Core
    "Asset/Asset.h"
    "Asset/Texture.h"
    "Asset/StaticMesh.h"
    "Asset/Material.h"
    "Asset/AssetManager.h"
    "Component/MeshRenderer.h"
    "Base/Entity.h"
    "Base/Entity.cpp"
    "Base/Component.h"
    "Base/Component.cpp"
    "Render/Pipeline.h"
    "Render/Pipeline.cpp"
    "Utility/Log.h"
 "Utility/StringHash.h")
