add_library (
    Core
    "Asset/Asset.h"
    "Asset/TextureAsset.h"
    "Asset/StaticMeshAsset.h"
    "Asset/MaterialAsset.h"
    "Asset/MaterialAsset.cpp"
    "Asset/AssetManager.h"
    "Component/MeshRenderer.h"
    "Base/Entity.h"
    "Base/Entity.cpp"
    "Base/Component.h"
    "Base/Component.cpp"
    "Render/Pipeline.h"
    "Render/Pipeline.cpp"
    "Utility/Log.h"
 "Utility/StringHash.h" "Asset/AssetManager.cpp" "Base/Reflection.h" "Engine.h"  "Asset/Scene.h" "Asset/StaticMeshAsset.cpp" "Asset/Asset.cpp")
