add_library (
    Core
    "Asset/Asset.h"
    "Asset/Asset.cpp"
    "Asset/TextureAsset.h"
    "Asset/TextureAsset.cpp"
    "Asset/MeshAsset.h"
    "Asset/MeshAsset.cpp"
    "Asset/MaterialAsset.h"
    "Asset/MaterialAsset.cpp"
    "Asset/Scene.h"
    "Asset/AssetManager.h"
    "Asset/AssetManager.cpp"
    "Component/MeshRenderer.h"
    "Base/Entity.h"
    "Base/Entity.cpp"
    "Base/Component.h"
    "Base/Component.cpp"
    "Render/Pipeline.h"
    "Render/Pipeline.cpp"
    "Utility/Log.h"
    "Utility/StringHash.h"
    "Base/Reflection.h"
    "Engine.h"
    "Utility/GLTFLoader.h"
    "Utility/GLTFLoader.cpp"
 "Component/MeshRenderer.cpp")
