add_executable (Editor "Editor.h" "Editor.cpp" "ImGuiHandler.h")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET Editor PROPERTY CXX_STANDARD 20)
endif()

LINK_WITH_VARIABLES(Editor OPENTHREADS_LIBRARY OSG_LIBRARY OSGDB_LIBRARY OSGUTIL_LIBRARY OSGGA_LIBRARY OSGVIEWER_LIBRARY OSGEARTH_LIBRARY)
target_link_libraries(Editor PRIVATE imgui ${OPENGL_LIBRARIES})
