add_library (
    Core
    "Reflection/Any.h"
    "Reflection/Argument.h"
    "Reflection/Class.h"
    "Reflection/Enum.h"
    "Reflection/Fundamental.h"
    "Reflection/Method.h"
    "Reflection/Property.h"
    "Reflection/Reflection.h"
    "Reflection/Reflection.cpp"
    "Reflection/Special.h"
    "Reflection/Struct.h"
    "Reflection/Type.h"
    "Reflection/Special/StdArray.h"
    "Reflection/Special/StdMap.h"
    "Reflection/Special/StdPair.h"
    "Reflection/Special/StdSet.h"
    "Reflection/Special/StdString.h"
    "Reflection/Special/StdTuple.h"
    "Reflection/Special/StdVariant.h"
    "Reflection/Special/StdVector.h"

    "Object.h"
    "Entity.h"
    "Entity.cpp"
    "Component.h"
    "Component.cpp"
    "Context.h"

    "Serialization/Serializer.h"
 "Reflection/Metadata.h" "Asset.h" "Object.cpp" "AssetManager.h" "Serialization/AssetSaver.h" "Serialization/Serializer.cpp" "Serialization/AssetSaver.cpp" "Scene.h" "Serialization/AssetSerializer.h")
