add_library (
    Render
    "Pipeline.h"
    "Pipeline.cpp"
    "Shader.h"
    "Texture.h"
    "Texture.cpp"
    "Material.h"
  "Shader.cpp" "Material.cpp" "Mesh.h" "Mesh.cpp" "SceneRendering.h" "Texture2D.h" "Texture2D.cpp" "TextureCubemap.h" "TextureCubemap.cpp" "Texture3D.h" "Texture3D.cpp" "Texture2DArray.h" "Texture2DArray.cpp")
